SERVER-132733  $out commit in replica set concurrent to viewless timeseries FCV upgrade may return NamespaceExists error (#60186)

GitOrigin-RevId: 890aaaf7b719f622fb32afad8f2654a824578bb1